<resources>
    <string name="app_name">QuickFixx</string>
    <string name="login">Login</string>
    <string name="username">Email-id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_id">Email-id</string>
    <string name="phone_no">Phone-No</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="top_rated">Top Rated</string>
    <string name="ratings">Ratings</string>
    <string name="sort_by">Sort By</string>
    <string name="resend_otp"><u>Resend OTP</u></string>

</resources>