<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Signup_Page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/Signup_Head"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:background="@drawable/circle_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/viewBubble1"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_main_1"
            app:layout_constraintStart_toEndOf="@+id/Signup_Head"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/viewBubble4"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/circle_main_4"
            app:layout_constraintEnd_toStartOf="@+id/viewBubble1"
            app:layout_constraintTop_toTopOf="@+id/viewBubble1" />

        <ImageView
            android:id="@+id/viewBubble2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/circle_main_3"
            app:layout_constraintStart_toEndOf="@+id/viewBubble1"
            app:layout_constraintTop_toBottomOf="@+id/viewBubble1" />

        <ImageView
            android:id="@+id/viewBubble3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/circle_main_2"
            android:translationY="-15dp"
            app:layout_constraintEnd_toStartOf="@+id/viewBubble1"
            app:layout_constraintTop_toBottomOf="@+id/viewBubble1" />

        <ImageView
            android:id="@+id/viewBubble6"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/circle_primary"
            app:layout_constraintStart_toEndOf="@id/viewBubble1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/viewBubble5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/circle_main_4"
            android:translationY="-30dp"
            app:layout_constraintStart_toEndOf="@id/viewBubble3"
            app:layout_constraintTop_toBottomOf="@+id/viewBubble1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Signup_Head"
            app:layout_constraintVertical_bias="0.177">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Signup_name"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                app:hintTextAppearance="@style/MyTextHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input2_name"
                    style="@style/MyEditTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Signup_Address"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/address"
                app:hintTextAppearance="@style/MyTextHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input2_Address"
                    style="@style/MyEditTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Signup_City"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/city"
                    app:hintTextAppearance="@style/MyTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Input2_City"
                        style="@style/MyEditTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPostalAddress"
                        android:maxLength="100" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Signup_State"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:hint="@string/state"
                    app:hintTextAppearance="@style/MyTextHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Input2_State"
                        style="@style/MyEditTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPostalAddress"
                        android:maxLength="100" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Signup_Phone_No"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_no"
                app:hintTextAppearance="@style/MyTextHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input2_Phone_No"
                    style="@style/MyEditTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Signup_EmailId"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_id"
                app:hintTextAppearance="@style/MyTextHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input2_EmailId"
                    style="@style/MyEditTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Signup_Password"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:hintTextAppearance="@style/MyTextHint"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Input2_Password"
                    style="@style/MyEditTextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/SignUp_Login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start|center"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/Signup_Signup_Button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_main"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/Signup_Signup"
                        android:layout_width="0sp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/login"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/colorPrimaryDark" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>