<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBtn"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/back_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginRight="15dp"
            android:background="@drawable/baseline_keyboard_backspace_24" />

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="Hello Tirth Shah!!"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="8dp"
            android:background="@drawable/icons8_menu_30" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/sort_by"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/sort_by"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                app:chipBackgroundColor="#f4f4f4"
                app:chipCornerRadius="15dp"
                app:chipIcon="@drawable/icons8_sort_down_24"
                app:chipStrokeColor="@color/colorPrimary"
                app:chipStrokeWidth="2dp"
                app:chipSurfaceColor="#8F8B8B" />

            <com.google.android.material.chip.Chip
                android:id="@+id/top_rated"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:text="@string/top_rated"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                app:chipBackgroundColor="#f4f4f4"
                app:chipCornerRadius="15dp"
                app:chipIcon="@drawable/icons8_star_24"
                app:chipStrokeColor="@color/colorPrimary"
                app:chipStrokeWidth="2dp"
                app:chipSurfaceColor="#8F8B8B" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ratings"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:text="@string/ratings"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                app:chipBackgroundColor="#f4f4f4"
                app:chipCornerRadius="15dp"
                app:chipIcon="@drawable/icons8_sort_down_24"
                app:chipStrokeColor="@color/colorPrimary"
                app:chipStrokeWidth="2dp"
                app:chipSurfaceColor="#000000" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/avilable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/poppins_bold"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
